# mochi-colza

./: .envrc  CMakeLists.txt  README.md  spack.yaml
examples/: CMakeLists.txt  admin.cpp  bedrock-init.json  bedrock-join.json  bedrock.json  client.cpp  client2.cpp  example_send_recv.cpp  server.cpp
examples/distributed/: CMakeLists.txt  admin.cpp  client.cpp  server.cpp  test.scripts
examples/pipeline/: CMakeLists.txt  DummyBackend.cpp  DummyBackend.hpp
examples/single/: CMakeLists.txt  admin.cpp  client.cpp  server.cpp
include/colza/: Admin.hpp  AsyncRequest.hpp  Backend.hpp  Client.hpp  ClientCommunicator.hpp  DistributedPipelineHandle.hpp  ErrorCodes.hpp  Exception.hpp  MPIClientCommunicator.hpp  PipelineHandle.hpp  Provider.hpp  ProviderHandle.hpp  RequestResult.hpp  Types.hpp  UUID.hpp  buffer_wrapper.hpp  communicator.hpp  config.hpp.in  controller.hpp  request.hpp  tags.hpp  types.hpp  uuid.hpp
include/colza/DynamicSim/: DynamicScheduler.hpp
src/: Admin.cpp  AdminImpl.hpp  AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  DistributedPipelineHandle.cpp  DistributedPipelineHandleImpl.hpp  PipelineHandle.cpp  PipelineHandleImpl.hpp  Provider.cpp  ProviderImpl.hpp  SSGUtil.hpp  SimpleStagerBackend.cpp  SimpleStagerBackend.hpp  TypeSizes.hpp  colza-admin.pc.in  colza-client.pc.in  colza-config.cmake.in  colza-server.pc.in  colza.pc.in
src/comm/: allgather.cpp  allgatherv.cpp  allreduce.cpp  alltoall.cpp  barrier.cpp  bcast.cpp  create.cpp  destroy.cpp  duplicate.cpp  gather.cpp  gatherv.cpp  operation.cpp  reduce.cpp  request.cpp  scatter.cpp  scatterv.cpp  send_recv.cpp  subset.cpp  wait.cpp
src/ctrl/: create.cpp  delete.cpp  membership.cpp  misc.cpp  rpcs.cpp  sync.cpp  uuid.cpp  world.cpp
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
tests/: AdminTest.cpp  CMakeLists.txt  ClientTest.cpp  CppUnitAdditionalMacros.hpp  Main.cpp  PipelineTest.cpp  main.cpp  main_join.cpp  test_alltoall.cpp  test_alltoall.hpp  test_anysource.cpp  test_anysource.hpp  test_barrier.cpp  test_barrier.hpp  test_bcast.cpp  test_bcast.hpp  test_destroy.cpp  test_destroy.hpp  test_duplicate.cpp  test_duplicate.hpp  test_gather.cpp  test_gather.hpp  test_gatherv.cpp  test_gatherv.hpp  test_inplace.cpp  test_inplace.hpp  test_isend_irecv.cpp  test_isend_irecv.hpp  test_isend_irecv_complex.cpp  test_isend_irecv_complex.hpp  test_join.cpp  test_join.hpp  test_leave.cpp  test_leave.hpp  test_reduce.cpp  test_reduce.hpp  test_send_recv.cpp  test_send_recv.hpp  test_subset.cpp  test_subset.hpp  (+2 more)
